--- a/weasel.yaml
+++ b/weasel.yaml
@@ -31,10 +31,14 @@ style:
   vertical_text: false # 垂直文本显示
   vertical_text_left_to_right: false # 垂直文本从左到右显示
   vertical_text_with_wrap: false # 垂直文本自动换行
-  label_format: "%s" # 候选词标签格式
 
-  # win11 主题可选差异配置，让高亮的那一竖线和候选数字有距离：
-  # label_format: "\u2004%s" # 候选词标签格式
+  # 这里提供两种不同主题的差异配置，自行切换注释即可
+
+  # Win10 主题差异配置
+  # label_format: "%s" # 候选词标签格式
+
+  # Win11 主题差异配置，让高亮的那一竖线和候选数字有距离：
+  label_format: "\u2004%s" # 候选词标签格式
 
   layout:
     align_type: center # 布局对齐方式
@@ -46,15 +50,13 @@ style:
     margin_x: 17 # 窗口左右边距
     margin_y: 17 # 窗口上下边距
     spacing: 10 # 候选词间距
-    candidate_spacing: 50 # 候选词内部间距
-    # 若label_format: "\u2004%s"，使用：
-    # candidate_spacing: 35
     hilite_spacing: 17 # 高亮显示间距
     shadow_offset_x: 5 # 阴影 X 轴偏移
 
-    # 以下提供两种不同主题的差异配置，自行切换注释即可
+    # 这里提供两种不同主题的差异配置，自行切换注释即可
 
     # Win11 主题差异配置
+    candidate_spacing: 35 # 候选词内部间距
     corner_radius: 14 # 候选圆角半径
     hilite_padding: 6 # 高亮高度
     hilite_padding_x: 7 # 高亮 X 横向方向边距
@@ -64,6 +66,7 @@ style:
     shadow_radius: 13 # 阴影半径
 
     # Win10 主题差异配置，也可以用于 Win11，但需要把高亮圆角改为 14
+    candidate_spacing: 50 # 候选词内部间距
     # corner_radius: 10 # 候选条圆角，不需要圆角设置为 0
     # hilite_padding: 18 # 高亮高度
     # hilite_padding_x: 18 # 高亮 x 横向方向边距，可以自行调整
@@ -71,7 +74,6 @@ style:
     # round_corner: 0 # 高亮圆角，小狼毫天圆地方此项可设置为 0，也可自行调整
     # shadow_offset_y: 4 # 阴影 Y 轴偏移
     # shadow_radius: 10 # 阴影半径
-
 
   color_scheme: win11_weasel # 颜色方案
 
