--- a/dicts/simp.dict.yaml
+++ b/dicts/simp.dict.yaml
@@ -33,7 +33,7 @@
 # 需要注音的字词设定在 others/script/rime/需要注音.txt
 ---
 name: 8105
-version: "2023-08-27"
+version: "2023-09-25"
 sort: by_weight
 ...
 ### 按需启用
@@ -50,6 +50,7 @@ sort: by_weight
 卻	que	1
 濛	meng	1
 诶	ei	1
+凃	tu	1
 # 注释掉的这几行已经加入到下面并调整到合适的权重了
 # 〇	ling
 # 囧	jiong
@@ -66,6 +67,8 @@ sort: by_weight
 # 觍	tian
 # 𪨊	song
 # 磺	huang
+# 屮	cao
+# 芔	cao
 
 
 ### 小时候没学过的拼音。。。
@@ -84,7 +87,7 @@ sort: by_weight
 
 ### 字表
 # +_+
-啊	a	2366043
+啊	a	5366043
 阿	a	867275
 吖	a	854
 锕	a	144
@@ -549,7 +552,7 @@ sort: by_weight
 欂	bo	0
 袯	bo	0
 𬭛	bo	0
-不	bu	29858097
+不	bu	2985809
 部	bu	1972176
 步	bu	1077549
 布	bu	591571
@@ -613,6 +616,8 @@ sort: by_weight
 糙	cao	12840
 槽	cao	12412
 漕	cao	2663
+屮	cao	2222
+芔	cao	1111
 艚	cao	50
 螬	cao	26
 𥕢	cao	0
@@ -911,7 +916,7 @@ sort: by_weight
 杻	chou	1
 侴	chou	0
 椆	chou	0
-出	chu	8294943
+出	chu	2294943
 处	chu	1626691
 楚	chu	728204
 除	chu	599918
@@ -3315,7 +3320,7 @@ sort: by_weight
 栲	kao	164
 㸆	kao	0
 洘	kao	0
-可	ke	7069176
+可	ke	1069176
 刻	ke	977816
 克	ke	777926
 客	ke	692916
@@ -3327,6 +3332,7 @@ sort: by_weight
 柯	ke	71973
 棵	ke	58780
 壳	ke	41877
+氪	ke	35000
 磕	ke	34654
 嗑	ke	31720
 珂	ke	16769
@@ -3346,7 +3352,6 @@ sort: by_weight
 髁	ke	232
 骒	ke	91
 缂	ke	79
-氪	ke	30
 牁	ke	14
 匼	ke	3
 炣	ke	0
@@ -3773,7 +3778,6 @@ sort: by_weight
 廖	liao	31067
 撩	liao	21011
 寥	liao	20857
-了	liao	20000
 僚	liao	19624
 缭	liao	16457
 燎	liao	9587
@@ -3795,6 +3799,7 @@ sort: by_weight
 憭	liao	6
 簝	liao	4
 橑	liao	1
+了	liao	0
 𪤗	liao	0
 列	lie	244324
 裂	lie	174922
@@ -4181,7 +4186,7 @@ sort: by_weight
 芼	mao	35
 眊	mao	34
 鄚	mao	15
-么	me	9727134
+么	me	9727
 没	mei	7560391
 美	mei	1692264
 每	mei	1015025
@@ -4212,8 +4217,8 @@ sort: by_weight
 糜	mei	1
 媄	mei	0
 瑂	mei	0
-们	men	10741873
 门	men	2233462
+们	men	1074187
 闷	men	203501
 懑	men	2697
 扪	men	2344
@@ -4480,15 +4485,15 @@ sort: by_weight
 硇	nao	51
 臑	nao	10
 峱	nao	1
-呢	ne	1793494
+呢	ne	179349
 讷	ne	10324
 哪	ne	1
 内	nei	1509530
 馁	nei	5700
 嫩	nen	58594
 恁	nen	3956
-能	neng	5933639
-你	ni	14221925
+能	neng	59336
+你	ni	1422192
 尼	ni	272244
 妮	ni	155375
 泥	ni	120657
@@ -4610,8 +4615,8 @@ sort: by_weight
 衄	nv	42
 虐	nve	30741
 疟	nve	1012
-哦	o	356333
-噢	o	49608
+哦	o	3563330
+噢	o	496080
 喔	o	1
 欧	ou	253543
 偶	ou	150991
@@ -7837,8 +7842,8 @@ sort: by_weight
 羱	yuan	4
 圜	yuan	1
 𫘪	yuan	0
-月	yue	1546594
 越	yue	1069176
+月	yue	546594
 约	yue	526224
 跃	yue	169432
 岳	yue	131477
@@ -8194,6 +8199,7 @@ sort: by_weight
 至	zhi	1199059
 之	zhi	1173763
 指	zhi	1099010
+值	zhi	920306
 制	zhi	870792
 支	zhi	532396
 志	zhi	485065
@@ -8203,7 +8209,6 @@ sort: by_weight
 置	zhi	379704
 致	zhi	370734
 职	zhi	326699
-值	zhi	320306
 智	zhi	310406
 纸	zhi	273013
 织	zhi	218959
