--- a/weasel.yaml
+++ b/weasel.yaml
@@ -2,7 +2,7 @@
 # encoding: utf-8
 # 修改自: https://github.com/rime/weasel/blob/master/output/data/weasel.yaml
 
-config_version: "2023-08-04"
+config_version: "2023-09-29"
 
 app_options:
   cmd.exe:
@@ -13,67 +13,36 @@ app_options:
 style:
   antialias_mode: default # 抗锯齿模式
   ascii_tip_follow_cursor: false # ASCII提示跟随光标
+  display_tray_icon: false # 显示系统托盘图标
+
+  fullscreen: false # 全屏候选词窗口
+  inline_preedit: true # 在光标位置显示预编辑文本
+  preedit_type: composition # 预编辑文本类型
+  mouse_hover_ms: 0 # 鼠标悬停选词响应时间，若设置过低，鼠标在候选框上时会影响选词，值为 0 或将这行注释禁用此功能
+  paging_on_scroll: false # 鼠标滚轮翻页候选词
+
+  horizontal: true # 水平排列候选词
   font_face: Microsoft YaHei # 主要字体
   label_font_face: Microsoft YaHei # 标签字体
   comment_font_face: Microsoft YaHei # 注释字体
   font_point: 14 # 主要字体大小
   label_font_point: 14 # 标签字体大小
   comment_font_point: 14 # 注释字体大小
-  horizontal: true # 水平排列候选词
-  fullscreen: false # 全屏候选词窗口
-  inline_preedit: true # 在光标位置显示预编辑文本
-  preedit_type: composition # 预编辑文本类型
-  display_tray_icon: false # 显示系统托盘图标
   mark_text: "" # 标记文本
-  mouse_hover_ms: 0 # 鼠标悬停选词响应时间，若设置过低，鼠标在候选框上时会影响选词，值为 0 或将这行注释禁用此功能
-  paging_on_scroll: false # 鼠标滚轮翻页候选词
+
   vertical_auto_reverse: false # 垂直排列时自动反转顺序
   vertical_text: false # 垂直文本显示
   vertical_text_left_to_right: false # 垂直文本从左到右显示
   vertical_text_with_wrap: false # 垂直文本自动换行
 
-  # 这里提供两种不同主题的差异配置，自行切换注释即可
+  # 这里提供两种不同主题配置，自行切换注释即可
+  # 必须启用其中一种预设！
 
-  # Win10 主题差异配置
-  # label_format: "%s" # 候选词标签格式
+  # Windows 11 风格预设
+  __include: "weasel:/win11_preset"
 
-  # Win11 主题差异配置，让高亮的那一竖线和候选数字有距离：
-  label_format: "\u2004%s" # 候选词标签格式
-
-  layout:
-    align_type: center # 布局对齐方式
-    max_width: 0 # 最大宽度限制
-    min_width: 160 # 最小宽度限制
-    min_height: 0 # 最小高度限制
-    max_height: 0 # 最大高度限制
-    border_width: 2 # 窗口边框宽度
-    margin_x: 17 # 窗口左右边距
-    margin_y: 17 # 窗口上下边距
-    spacing: 10 # 候选词间距
-    hilite_spacing: 17 # 高亮显示间距
-    shadow_offset_x: 5 # 阴影 X 轴偏移
-
-    # 这里提供两种不同主题的差异配置，自行切换注释即可
-
-    # Win11 主题差异配置
-    candidate_spacing: 35 # 候选词内部间距
-    corner_radius: 14 # 候选圆角半径
-    hilite_padding: 6 # 高亮高度
-    hilite_padding_x: 7 # 高亮 X 横向方向边距
-    hilite_padding_y: 7 # 高亮 Y 纵向方向边距
-    round_corner: 14 # 高亮圆角
-    shadow_offset_y: 6 # 阴影 Y 轴偏移
-    shadow_radius: 13 # 阴影半径
-
-    # Win10 主题差异配置，也可以用于 Win11，但需要把高亮圆角改为 14
-    candidate_spacing: 50 # 候选词内部间距
-    # corner_radius: 10 # 候选条圆角，不需要圆角设置为 0
-    # hilite_padding: 18 # 高亮高度
-    # hilite_padding_x: 18 # 高亮 x 横向方向边距，可以自行调整
-    # hilite_padding_y: 18 # 高亮 y 纵向方向边距
-    # round_corner: 0 # 高亮圆角，小狼毫天圆地方此项可设置为 0，也可自行调整
-    # shadow_offset_y: 4 # 阴影 Y 轴偏移
-    # shadow_radius: 10 # 阴影半径
+  # Windows 10 风格预设
+  # __include: "weasel:/win10_preset"
 
   color_scheme: win11_weasel # 颜色方案
 
@@ -82,19 +51,6 @@ preset_color_schemes:
     name: "文文／Ayaya"
     author: "Lufs X <i@isteed.cc>"
 
-    alpha: 0.95
-    horizontal: true
-    inline_preedit: true
-    candidate_format: "%c\u2005%@"
-    corner_radius: 5
-    border_height: 0
-    border_width: 0
-    font_face: "LXGWWenKai-Regular,PingFangSC"
-    font_point: 16.5
-    label_font_face: "LXGWWenKai-Regular,PingFangSC"
-    label_font_point: 12
-
-    color_space: display_p3
     back_color: 0xFFFFFF
     border_color: 0xECE4FC
     candidate_text_color: 0x121212
@@ -108,19 +64,8 @@ preset_color_schemes:
   apathy:
     name: 冷漠／Apathy
     author: LIANG Hai
-    alpha: 0.95
-    horizontal: true
-    inline_preedit: true
-    candidate_format: "%c\u2005%@"
-    corner_radius: 5
-    border_height: 0
-    border_width: 0
     back_color: 0xFFFFFF
-    font_face: "PingFangSC-Regular,HanaMinB"
-    font_point: 16
     text_color: 0x424242
-    label_font_face: "STHeitiSC-Light"
-    label_font_point: 12
     hilited_candidate_text_color: 0xEE6E00
     hilited_candidate_back_color: 0xFFF0E4
     comment_text_color: 0x999999
@@ -137,53 +82,6 @@ preset_color_schemes:
     hilited_comment_text_color: 0xffffff
     hilited_label_color: 0xffffff
     label_color: 0x888888
-    label_format: "%s"
-    font_point: 16
-    label_font_point: 12
-    corner_radius: 0
-    inline_preedit: true
-    min_width: 160
-    min_height: 0
-    border_width: 6
-    border_height: 6
-    margin_x: 12
-    margin_y: 12
-    spacing: 10
-    candidate_spacing: 24
-    hilite_spacing: 8
-    hilite_padding: 12
-    round_corner: 0
-    horizontal: true
-    candidate_format: "%c\u2005%@ "
-
-  win10_ayaya:
-    label_format: "%s"
-    font_point: 16
-    label_font_point: 12
-    corner_radius: 0
-    inline_preedit: true
-    min_width: 160
-    min_height: 0
-    border_width: 6
-    border_height: 6
-    margin_x: 12
-    margin_y: 12
-    spacing: 10
-    candidate_spacing: 24
-    hilite_spacing: 8
-    hilite_padding: 12
-    round_corner: 0
-    horizontal: true
-    candidate_format: "%c\u2005%@ "
-
-    back_color: 0xFFFFFF
-    candidate_text_color: 0x121212
-    comment_text_color: 0x8E8E8E
-    hilited_candidate_back_color: 0xECE4FC
-    hilited_candidate_label_color: 0xB18FF4
-    hilited_candidate_text_color: 0x7A40EC
-    label_color: 0x888785
-    text_color: 0x8100EB
 
   macos_light:
     author: "一方<liuour@gmail.com>"
@@ -197,18 +95,7 @@ preset_color_schemes:
     hilited_text_color: 0x999999
     candidate_text_color: 0x3c3c3c
     comment_text_color: 0x999999
-    horizontal: true
-    inline_preedit: true
     label_color: 0x999999
-    candidate_format: "%c\u2005%@"
-    font_face: "PingFangSC"
-    font_point: 16
-    label_font_point: 13
-    corner_radius: 5
-    hilited_corner_radius: 5
-    border_height: 4
-    border_width: 4
-    border_color_width: 0
 
   macos_dark:
     author: "一方<liuour@gmail.com>"
@@ -222,40 +109,12 @@ preset_color_schemes:
     hilited_text_color: 0x999999
     candidate_text_color: 0xe9e9ea
     comment_text_color: 0x999999
-    horizontal: true
-    inline_preedit: true
     label_color: 0x999999
-    candidate_format: "%c\u2005%@"
-    font_face: "PingFangSC"
-    font_point: 16
-    label_font_point: 13
-    corner_radius: 5
-    hilited_corner_radius: 5
-    border_height: 4
-    border_width: 4
-    border_color_width: 0
 
   macos12_light:
     name: "高仿亮色 macOS"
     author: "Lufs X <i@isteed.cc>"
 
-    font_face: "PingFangSC-Regular"
-    font_point: 15
-    label_font_face: "PingFangSC-Regular"
-    label_font_point: 12
-    comment_font_face: "PingFangSC-Regular"
-    comment_font_point: 13
-    candidate_format: "%c\u2004%@"
-    horizontal: true
-    inline_preedit: true
-    corner_radius: 7.0
-    hilited_corner_radius: 6.0
-    base_offset: -0.2
-    border_height: 1.0
-    border_width: 2.0
-    border_color_width: 0
-    line_spacing: 1.0
-    color_space: display_p3
     back_color: 0xFFFFFF
     border_color: 0xFFFFFF
     candidate_text_color: 0xD8000000
@@ -272,23 +131,6 @@ preset_color_schemes:
     name: "高仿暗色 macOS"
     author: "Lufs X <i@isteed.cc>"
 
-    font_face: "PingFangSC-Regular"
-    font_point: 15
-    label_font_face: "PingFangSC-Regular"
-    label_font_point: 12
-    comment_font_face: "PingFangSC-Regular"
-    comment_font_point: 13
-    candidate_format: "%c\u2004%@"
-    horizontal: true
-    inline_preedit: true
-    corner_radius: 7.0
-    hilited_corner_radius: 6.0
-    base_offset: -0.2
-    border_height: 1.0
-    border_width: 2.0
-    border_color_width: 0
-    line_spacing: 1.0
-    color_space: display_p3
     back_color: 0x1E1F24
     border_color: 0x1E1F24
     candidate_text_color: 0xE8E8E8
@@ -324,3 +166,51 @@ preset_color_schemes:
     label_color: 0x727272 # 候选数字颜色
     shadow_color: 0x20000000 # 阴影颜色，新版小狼毫 CI 更改了绘制，若无法看到阴影，请更改为 000000，观察是否能正常绘制阴影
     text_color: 0x000000 # 拼音文字颜色
+
+win11_preset:
+  label_format: "\u2005\u2006%s" # 候选词标签格式
+  layout:
+    align_type: center # 布局对齐方式
+    max_width: 0 # 最大宽度限制
+    min_width: 160 # 最小宽度限制
+    min_height: 0 # 最小高度限制
+    max_height: 0 # 最大高度限制
+    border_width: 1 # 窗口边框宽度
+    margin_x: 16 # 窗口左右边距
+    margin_y: 14 # 窗口上下边距
+    spacing: 18 # 候选词间距
+    hilite_spacing: 14 # 高亮显示间距
+    shadow_offset_x: 6 # 阴影 X 轴偏移
+
+    candidate_spacing: 25 # 候选词内部间距
+    corner_radius: 12 # 候选圆角半径
+    hilite_padding: 5 # 高亮高度
+    hilite_padding_x: 7 # 高亮 X 横向方向边距
+    hilite_padding_y: 6 # 高亮 Y 纵向方向边距
+    round_corner: 12 # 高亮圆角
+    shadow_offset_y: 6 # 阴影 Y 轴偏移
+    shadow_radius: 13 # 阴影半径
+
+win10_preset:
+  label_format: "%s" # 候选词标签格式
+  layout:
+    align_type: center # 布局对齐方式
+    max_width: 0 # 最大宽度限制
+    min_width: 160 # 最小宽度限制
+    min_height: 0 # 最小高度限制
+    max_height: 0 # 最大高度限制
+    border_width: 2 # 窗口边框宽度
+    margin_x: 17 # 窗口左右边距
+    margin_y: 17 # 窗口上下边距
+    spacing: 10 # 候选词间距
+    hilite_spacing: 17 # 高亮显示间距
+    shadow_offset_x: 5 # 阴影 X 轴偏移
+
+    candidate_spacing: 50 # 候选词内部间距
+    corner_radius: 10 # 候选条圆角，不需要圆角设置为 0
+    hilite_padding: 18 # 高亮高度
+    hilite_padding_x: 18 # 高亮 x 横向方向边距，可以自行调整
+    hilite_padding_y: 18 # 高亮 y 纵向方向边距
+    round_corner: 0 # 高亮圆角，小狼毫天圆地方此项可设置为 0，也可自行调整
+    shadow_offset_y: 4 # 阴影 Y 轴偏移
+    shadow_radius: 10 # 阴影半径
