--- a/dicts/simp.dict.yaml
+++ b/dicts/simp.dict.yaml
@@ -33,7 +33,7 @@
 # 需要注音的字词设定在 others/script/rime/需要注音.txt
 ---
 name: 8105
-version: "2023-11-29"
+version: "2023-12-05"
 sort: by_weight
 ...
 ### 按需启用
@@ -50,9 +50,11 @@ sort: by_weight
 菈	la	1
 濛	meng	1
 嬢	niang	1
+珮	pei	0
 卻	que	1
 薙	ti	1
 凃	tu	1
+晛	xian	0
 咲	xiao	1
 # 注释掉的这几行已经加入到下面并调整到合适的权重了
 # 〇	ling
