--- a/squirrel.yaml
+++ b/squirrel.yaml
@@ -51,9 +51,9 @@ preset_color_schemes:
     name: "文文／Ayaya"
     author: "Lufs X <i@isteed.cc>"
 
-    font_face: "LXGWWenKai-Regular"
+    font_face: "LXGWWenKai-Regular, PingFangSC"
     font_point: 16.5
-    label_font_face: "LXGWWenKai-Regular"
+    label_font_face: "LXGWWenKai-Regular, PingFangSC"
     label_font_point: 12
 
     candidate_format: "%c\u2005%@"
@@ -85,9 +85,9 @@ preset_color_schemes:
     name: "文文／Ayaya"
     author: "Lufs X <i@isteed.cc>"
 
-    font_face: "LXGWWenKai-Regular"
+    font_face: "LXGWWenKai-Regular, PingFangSC"
     font_point: 16.5
-    label_font_face: "LXGWWenKai-Regular"
+    label_font_face: "LXGWWenKai-Regular, PingFangSC"
     label_font_point: 12
 
     candidate_format: "%c\u2005%@"
@@ -119,9 +119,9 @@ preset_color_schemes:
     name: "灵梦／Reimu"
     author: "Lufs X <i@isteed.cc>"
 
-    font_face: "LXGWWenKai-Regular"
+    font_face: "LXGWWenKai-Regular, PingFangSC"
     font_point: 17
-    label_font_face: "LXGWWenKai-Regular"
+    label_font_face: "LXGWWenKai-Regular, PingFangSC"
     label_font_point: 14
 
     candidate_format: "%c\u2005%@"
@@ -138,7 +138,6 @@ preset_color_schemes:
 
     color_space: display_p3
     back_color: 0xF5FCFD
-    back_color: 0xF5FCFD
     candidate_text_color: 0x282C32
     comment_text_color: 0x717172
     label_color: 0x888785
@@ -153,9 +152,9 @@ preset_color_schemes:
     name: "灵梦／Reimu"
     author: "Lufs X <i@isteed.cc>"
 
-    font_face: "LXGWWenKai-Regular"
+    font_face: "LXGWWenKai-Regular, PingFangSC"
     font_point: 17
-    label_font_face: "LXGWWenKai-Regular"
+    label_font_face: "LXGWWenKai-Regular, PingFangSC"
     label_font_point: 14
 
     candidate_format: "%c\u2005%@"
@@ -216,67 +215,65 @@ preset_color_schemes:
     name: "WIN10"
     author: "Lufs X <i@isteed.cc>"
 
+    font_face: "LXGWWenKai-Regular, PingFangSC"
+    font_point: 16.5
+    label_font_face: "LXGWWenKai-Regular, PingFangSC"
+    label_font_point: 12
+
+    candidate_list_layout: linear
+    text_orientation: horizontal
+    inline_preedit: true
+
+    corner_radius: 0
+    hilited_corner_radius: -6.0
+    border_height: 7.0
+    border_width: 6.0
+    spacing: 10.0
+
+    color_space: srgb
+    back_color: 0xFFFFFF
     candidate_text_color: 0x000000
     comment_text_color: 0x888888
-    text_color: 0x000000
-    back_color: 0xffffff
-    hilited_text_color: 0x000000
-    hilited_back_color: 0xffffff
-    hilited_candidate_text_color: 0xffffff
-    hilited_candidate_back_color: 0xcc8f29
-    hilited_comment_text_color: 0xffffff
-    hilited_label_color: 0xffffff
     label_color: 0x888888
-    label_format: "%s"
-    font_point: 16
-    label_font_point: 12
-    corner_radius: 0
-    inline_preedit: true
-    min_width: 160
-    min_height: 0
-    border_width: 6
-    border_height: 6
-    margin_x: 12
-    margin_y: 12
-    spacing: 10
-    candidate_spacing: 24
-    hilite_spacing: 8
-    hilite_padding: 12
-    round_corner: 0
-    horizontal: true
-    candidate_format: "%c\u2005%@ "
+    hilited_candidate_back_color: 0xCC8F29
+    hilited_candidate_text_color: 0xFFFFFF
+    hilited_comment_text_color: 0xFFFFFF
+    hilited_candidate_label_color: 0xEEDAB8
+    text_color: 0x000000
+    hilited_back_color: 0xFFFFFF
+    hilited_text_color: 0x000000
 
   win10_ayaya:
     name: "WIN10／文文／Ayaya"
     author: "Lufs X <i@isteed.cc>"
 
-    label_format: "%s"
-    font_point: 16
+    font_face: "LXGWWenKai-Regular, PingFangSC"
+    font_point: 16.5
+    label_font_face: "LXGWWenKai-Regular, PingFangSC"
     label_font_point: 12
-    corner_radius: 0
-    inline_preedit: true
-    min_width: 160
-    min_height: 0
-    border_width: 6
-    border_height: 6
-    margin_x: 12
-    margin_y: 12
-    spacing: 10
-    candidate_spacing: 24
-    hilite_spacing: 8
-    hilite_padding: 12
-    round_corner: 0
-    horizontal: true
-    candidate_format: "%c\u2005%@ "
 
+    candidate_list_layout: linear
+    text_orientation: horizontal
+    inline_preedit: true
+
+    corner_radius: 0
+    hilited_corner_radius: -6.0
+    border_height: 7.0
+    border_width: 6.0
+    spacing: 10.0
+
+    color_space: display_p3
     back_color: 0xFFFFFF
+    border_color: 0xFFFFFF
     candidate_text_color: 0x121212
     comment_text_color: 0x8E8E8E
-    hilited_candidate_back_color: 0xECE4FC
-    hilited_candidate_label_color: 0xB18FF4
-    hilited_candidate_text_color: 0x7A40EC
     label_color: 0x888785
+    hilited_candidate_back_color: 0xECE4FC
+    hilited_candidate_text_color: 0x7A40EC
+    hilited_comment_text_color: 0x8E8E8E
+    hilited_candidate_label_color: 0xB18FF4
     text_color: 0x8100EB
+    hilited_text_color: 0xD8000000
 
   macos_light:
     author: "一方<liuour@gmail.com>"
