--- a/squirrel.yaml
+++ b/squirrel.yaml
@@ -4,7 +4,7 @@
 #
 # COMMIT SHA: 7c399be5d6d07d76dfdba3ba9f7f5639fc01284a
 
-config_version: "2023-05-09"
+config_version: "2023-12-30"
 
 # 可用选项：last | default | _custom_
 # last：上次使用的拉丁字母键盘布局
@@ -82,7 +82,7 @@ preset_color_schemes:
     hilited_text_color: 0xD8000000
 
   ayaya_dark:
-    name: "文文／Ayaya"
+    name: "文文／Ayaya／深色"
     author: "Lufs X <i@isteed.cc>"
 
     font_face: "LXGWWenKai-Regular, PingFangSC"
@@ -149,7 +149,7 @@ preset_color_schemes:
     hilited_text_color: 0xD8000000
 
   reimu_dark:
-    name: "灵梦／Reimu"
+    name: "灵梦／Reimu／深色"
     author: "Lufs X <i@isteed.cc>"
 
     font_face: "LXGWWenKai-Regular, PingFangSC"
@@ -225,10 +225,10 @@ preset_color_schemes:
     inline_preedit: true
 
     corner_radius: 0
-    hilited_corner_radius: -6.0
-    border_height: 7.0
-    border_width: 6.0
-    spacing: 10.0
+    hilited_corner_radius: -6
+    border_height: 7
+    border_width: 6
+    spacing: 10
 
     color_space: srgb
     back_color: 0xFFFFFF
@@ -257,10 +257,10 @@ preset_color_schemes:
     inline_preedit: true
 
     corner_radius: 0
-    hilited_corner_radius: -6.0
-    border_height: 7.0
-    border_width: 6.0
-    spacing: 10.0
+    hilited_corner_radius: -6
+    border_height: 7
+    border_width: 6
+    spacing: 10
 
     color_space: display_p3
     back_color: 0xFFFFFF
@@ -275,56 +275,6 @@ preset_color_schemes:
     text_color: 0x8100EB
     hilited_text_color: 0xD8000000
 
-  macos_light:
-    author: "一方<liuour@gmail.com>"
-    back_color: 0xFFFFFF
-    border_color: 0xFFFFFF
-    text_color: 0x424242
-    hilited_back_color: 0xD75A00
-    hilited_candidate_text_color: 0xFFFFFF
-    hilited_candidate_label_color: 0xFFFFFF
-    hilited_comment_text_color: 0x999999
-    hilited_text_color: 0x999999
-    candidate_text_color: 0x3c3c3c
-    comment_text_color: 0x999999
-    horizontal: true
-    inline_preedit: true
-    label_color: 0x999999
-    candidate_format: "%c\u2005%@"
-    font_face: "PingFangSC"
-    font_point: 16
-    label_font_point: 13
-    corner_radius: 5
-    hilited_corner_radius: 5
-    border_height: 4
-    border_width: 4
-    border_color_width: 0
-
-  macos_dark:
-    author: "一方<liuour@gmail.com>"
-    back_color: 0x252a2e
-    border_color: 0x050505
-    text_color: 0x424242
-    hilited_back_color: 0xD75A00
-    hilited_candidate_text_color: 0xFFFFFF
-    hilited_candidate_label_color: 0xFFFFFF
-    hilited_comment_text_color: 0x999999
-    hilited_text_color: 0x999999
-    candidate_text_color: 0xe9e9ea
-    comment_text_color: 0x999999
-    horizontal: true
-    inline_preedit: true
-    label_color: 0x999999
-    candidate_format: "%c\u2005%@"
-    font_face: "PingFangSC"
-    font_point: 16
-    label_font_point: 13
-    corner_radius: 5
-    hilited_corner_radius: 5
-    border_height: 4
-    border_width: 4
-    border_color_width: 0
-
   macos12_light:
     name: "高仿亮色 macOS"
     author: "Lufs X <i@isteed.cc>"
@@ -335,16 +285,17 @@ preset_color_schemes:
     label_font_point: 12
     comment_font_face: "PingFangSC-Regular"
     comment_font_point: 13
+
     candidate_format: "%c\u2004%@"
-    horizontal: true
+    candidate_list_layout: linear
+    text_orientation: horizontal
     inline_preedit: true
+
     corner_radius: 7
     hilited_corner_radius: 6
-    base_offset: -0.2
-    border_height: 1
     border_width: 2
-    border_color_width: 0
     line_spacing: 1
+
     color_space: display_p3
     back_color: 0xFFFFFF
     border_color: 0xFFFFFF
@@ -368,16 +319,17 @@ preset_color_schemes:
     label_font_point: 12
     comment_font_face: "PingFangSC-Regular"
     comment_font_point: 13
+
     candidate_format: "%c\u2004%@"
-    horizontal: true
+    candidate_list_layout: linear
+    text_orientation: horizontal
     inline_preedit: true
+
     corner_radius: 7
     hilited_corner_radius: 6
-    base_offset: -0.2
-    border_height: 1
     border_width: 2
-    border_color_width: 0
     line_spacing: 1
+
     color_space: display_p3
     back_color: 0x1E1F24
     border_color: 0x1E1F24
@@ -388,6 +340,138 @@ preset_color_schemes:
     hilited_candidate_text_color: 0xFFFFFF
     hilited_comment_text_color: 0x808080
     hilited_candidate_label_color: 0xFFE7D6
+    text_color: 0x3F000000
+    hilited_text_color: 0xD8000000
+
+  wechat:
+    name: "高仿微信输入法"
+    author: "Lufs X <i@isteed.cc>"
+
+    font_face: "PingFangSC-Regular"
+    font_point: 15
+    label_font_face: "PingFangSC-Regular"
+    label_font_point: 12
+    comment_font_face: "PingFangSC-Regular"
+    comment_font_point: 12
+
+    candidate_list_layout: linear
+    text_orientation: horizontal
+    inline_preedit: true
+
+    corner_radius: 7
+    hilited_corner_radius: 7
+    border_height: -2
+
+    color_space: display_p3
+    back_color: 0xFFFFFF
+    border_color: 0xFFFFFF
+    candidate_text_color: 0x444444
+    comment_text_color: 0x8E8E8E
+    label_color: 0x888785
+    hilited_candidate_back_color: 0x7BAE4F
+    hilited_candidate_text_color: 0xFFFFFF
+    hilited_comment_text_color: 0xF0F0F0
+    hilited_candidate_label_color: 0xFFFFFF
+    text_color: 0xFFFFFF
+    hilited_text_color: 0xD8000000
+
+  wechat_dark:
+    name: "高仿暗色微信输入法"
+    author: "Lufs X <i@isteed.cc>"
+
+    font_face: "PingFangSC-Regular"
+    font_point: 15
+    label_font_face: "PingFangSC-Regular"
+    label_font_point: 12
+    comment_font_face: "PingFangSC-Regular"
+    comment_font_point: 12
+
+    candidate_list_layout: linear
+    text_orientation: horizontal
+    inline_preedit: true
+
+    corner_radius: 7
+    hilited_corner_radius: 7
+    border_height: -2
+
+    color_space: display_p3
+    back_color: 0x151515
+    border_color: 0x151515
+    candidate_text_color: 0xB9B9B9
+    comment_text_color: 0x8E8E8E
+    label_color: 0x888785
+    hilited_candidate_back_color: 0x74A54B
+    hilited_candidate_text_color: 0xFFFFFF
+    hilited_comment_text_color: 0xF0F0F0
+    hilited_candidate_label_color: 0xFFFFFF
+    text_color: 0xFFFFFF
+    hilited_text_color: 0x777777
+
+  macos14:
+    name: "高仿 macOS 14"
+    author: "Lufs X <i@isteed.cc>"
+
+    font_face: "PingFangSC-Regular"
+    font_point: 16
+    label_font_face: "PingFangSC-Regular"
+    label_font_point: 8
+    comment_font_face: "PingFangSC-Regular"
+    comment_font_point: 13
+
+    candidate_format: "%c\u2003\u2003\u2003%@\u2004\u2001"
+    candidate_list_layout: linear
+    text_orientation: horizontal
+    inline_preedit: true
+
+    corner_radius: 7
+    hilited_corner_radius: -1
+    border_height: -4
+    border_width: 2
+
+    color_space: display_p3
+    back_color: 0xE7E8EA
+    border_color: 0xE7E8EA
+    candidate_text_color: 0x464647
+    comment_text_color: 0x3F000000
+    label_color: 0x7F7F7F
+    hilited_candidate_back_color: 0xD05925
+    hilited_candidate_text_color: 0xFFFFFF
+    hilited_comment_text_color: 0xDCDCDC
+    hilited_candidate_label_color: 0xFFFFFF
+    text_color: 0x3F000000
+    hilited_text_color: 0xD8000000
+
+  macos14_dark:
+    name: "高仿暗色 macOS 14"
+    author: "Lufs X <i@isteed.cc>"
+
+    font_face: "PingFangSC-Regular"
+    font_point: 16
+    label_font_face: "PingFangSC-Regular"
+    label_font_point: 8
+    comment_font_face: "PingFangSC-Regular"
+    comment_font_point: 13
+
+    candidate_format: "%c\u2003\u2003\u2003%@\u2004\u2001"
+    candidate_list_layout: linear
+    text_orientation: horizontal
+    inline_preedit: true
+
+    corner_radius: 7
+    hilited_corner_radius: -1
+    border_height: -4
+    border_width: 2
+
+    color_space: display_p3
+    back_color: 0x555557
+    border_color: 0x0C0C0C
+    candidate_text_color: 0xEEEEEE
+    comment_text_color: 0x80FFFFFF
+    label_color: 0x7C7C7C
+    hilited_candidate_back_color: 0xCA5824
+    hilited_candidate_text_color: 0xFFFFFF
+    hilited_comment_text_color: 0xF0F0F0
+    hilited_candidate_label_color: 0xFFFFFF
     text_color: 0x3F000000
     hilited_text_color: 0xD8000000
 
